--- a/index.html
+++ b/index.html
@@ -1,34 +1,3 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="Description" content="Este es mi promer proyecto web con EDteam. estoy muy feliz">
-    <title>Mi primera pagina web con EDteam</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="favicon2.png">
-    </head>
-<body>
-    <header><img src="img/logo.png" alt=""></header>
-    <nav>
-        <a href="#">Inicio</a>
-        <a href="contacto.html">Contactos</a>
-    </nav>
-    <article>
-        <h1>Bienvenidos a mi pagina web</h1>
-        <p>Estoy muy contento de mostrarles mi primera pagina web</p>
-        <section>
-            <h2>Mi experiencia</h2>
-            <h3>Dia 1</h3>
-            <p>La la la la la</p>
-        </section>
-    </article>
-    <aside>Compra el curso de HTML5</aside>
-    <footer>
-        <p>Braulio Tovar</p>
-    </footer>
-    <h1>Explosión de cariño</h1>
-    <script src="scripts.js"></script>
-</body>
-</html> 
+<h1>Este es un sitio web con Github Pages</h1>
+<p>Y fue creado con amor para el Curso de Git y Github de Platzi</p>
+<p><img src="https://i.imgur.com/PfA0M2o.gif" /></p>
